chore: pin pnpm and enforce node 20

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "aschedual",
   "private": true,
-  "packageManager": "pnpm@10.18.3",
+  "packageManager": "pnpm@9.15.5",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "pnpm -C apps/web dev",
     "dev:web": "pnpm -C apps/web dev",
