Add OpenRouter support for AI proposals

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,12 @@ AUTH_SECRET=
 AUTH_URL=http://localhost:3000
 NOTION_OAUTH_CLIENT_ID=
 NOTION_OAUTH_CLIENT_SECRET=
-AI_PROVIDER=openai
+AI_PROVIDER=openrouter
+AI_BASE_URL=https://openrouter.ai/api/v1
+AI_MODEL=google/gemma-3-27b-it:free
 AI_PROVIDER_KEY=
+OPENROUTER_SITE_URL=https://aschedual.vercel.app
+OPENROUTER_APP_NAME=Aschedual
 RATE_LIMIT_REDIS_URL=
 SUPABASE_PROJECT_URL=
 SUPABASE_SERVICE_ROLE_KEY=
